# nyanpass-panel

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  setup.py
.github/: copilot-instructions.md
src/: app.py  main.py  requirements.txt
src/nyanpass_panel/: __init__.py  app.py
src/nyanpass_panel.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/nyanpass_panel/static/: index.html
