[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]

[project]
name = "nyanpass-panel"
authors = [
    {name = "Nyanpass Team", email = "example@nyanpass.com"},
]
description = "A web panel for monitoring and managing Nyanpass services"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.6"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/bestmjj/python/nyanpass-panel"
"Bug Tracker" = "https://github.com/bestmjj/python/nyanpass-panel/issues"

[tool.setuptools_scm]
version_scheme = "guess-next-dev"
local_scheme = "dirty-tag"